infer/tests/codetoanalyze/objc/errors/category_procdesc/main.dot
/* @generated */
digraph iCFG {
6 [label="6:  DeclStmt \n   n$2=_fun___objc_alloc_no_fail(sizeof(class EOCPerson ):unsigned long ) [line 14]\n  n$3=_fun_NSObject_init(n$2:class EOCPerson *) virtual [line 14]\n  *&person:class EOCPerson *=n$3 [line 14]\n " shape="box"]
	

	 6 -> 5 ;
5 [label="5:  Message Call: performDaysWork \n   n$1=*&person:class EOCPerson * [line 15]\n  _fun_EOCPerson_performDaysWork(n$1:class EOCPerson *) virtual [line 15]\n " shape="box"]
	

	 5 -> 4 ;
4 [label="4:  DeclStmt \n   n$0=_fun_malloc_no_fail(sizeof(int ):int ) [line 16]\n  *&x:int *=n$0 [line 16]\n " shape="box"]
	

	 4 -> 3 ;
3 [label="3:  Return Stmt \n   *&return:int =0 [line 17]\n " shape="box"]
	

	 3 -> 2 ;
2 [label="2: Exit CategoryProcdescMain \n  " color=yellow style=filled]
	

1 [label="1: Start CategoryProcdescMain\nFormals: \nLocals:  x:int * person:class EOCPerson * \n   DECLARE_LOCALS(&return,&x,&person); [line 13]\n " color=yellow style=filled]
	

	 1 -> 6 ;
}
